--- a/index.html
+++ b/index.html
@@ -3,7 +3,15 @@
 </head>
 
 <body>
-	<h1> My portfolio </h1>
+	<h1> Tom Grainger </h1>
 	<h2> About me </h2>
-	<p> More info about me </p>
+	<p> I'm currently learning all the skills I will need to be a successful Full Stack Developer. I've spent time learning how to create various ways of data representation in Python and I am also
+	becoming very comfortable working with HTML, CSS and JavaScript. </p>
+	<h2> Projects I've created </h2>
+	<p> I'd like to list the projects we have completed and my contribution to them here when they're finished <p>
+	<h2> My Skills </h2>
+	<ul>
+	<li> JavaScript <li>
+	<li> Python <li>
+	<li> HTML and CSS <li>
 </body>
