Fixed errors, added sections

--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
 </head>
 
 <body>
+
 	<h1> Tom Grainger </h1>
-	<h2> About me </h2>
-	<p> I'm currently learning all the skills I will need to be a successful Full Stack Developer. I've spent time learning how to create various ways of data representation in Python and I am also
-	becoming very comfortable working with HTML, CSS and JavaScript. </p>
-	<h2> Projects I've created </h2>
-	<p> I'd like to list the projects we have completed and my contribution to them here when they're finished <p>
-	<h2> My Skills </h2>
-	<ul>
-	<li> JavaScript <li>
-	<li> Python <li>
-	<li> HTML and CSS <li>
+	<section>
+		<h2> About me </h2>
+		<p> I'm currently learning all the skills I will need to be a successful <b>Full Stack Developer</b>. 
+		I've spent time learning how to create various ways of data representation in Python and I am also
+		becoming very comfortable working with HTML, CSS and JavaScript. </p>
+	</section>
+	
+	<section>
+		<h2> Projects I've created </h2>
+		<p> I'd like to list the projects we have completed and my contribution to them here when they're finished. <p>
+	</section>	
+	
+	<section>
+		<h2> My Skills </h2>
+		<ul>
+			<li> JavaScript <li>
+			<li> Python <li>
+			<li> HTML and CSS <li>
+		</ul>
+	</section>
+
 </body>
