fixed error with list

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
 	<section>
 		<h2> My Skills </h2>
 		<ul>
-			<li> JavaScript <li>
-			<li> Python <li>
-			<li> HTML and CSS <li>
+			<li> JavaScript </li>
+			<li> Python </li>
+			<li> HTML and CSS </li>
 		</ul>
 	</section>
 
