Attempt at a nav bar

--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 </head>
 
 <body>
+	
+	<nav>
+		<ul>
+			<li> About me </li>
+			<li> Projects </li>
+			<li> Skills </li>
+		</ul>
+	</nav>
 
 	<h1> Tom Grainger </h1>
+
 	<section>
 		<h2> About me </h2>
 		<p> I'm currently learning all the skills I will need to be a successful <b>Full Stack Developer</b>. 
