--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <head>
 	<title> Tom Grainger Portfolio </title>
-	<link rel="stylsheet" href="styles.css">
+	<link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
